--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,7 @@
 <body>
 <header>
     {% block header %}
+        {% include 'includes/_header.html.twig' %}
     {% endblock %}
 </header>
 
@@ -28,6 +29,7 @@
 
 <footer>
     {% block footer %}
+        {% include 'includes/_footer.html.twig' %}
     {% endblock %}
 </footer>
 
