--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -22,7 +22,7 @@
         <a class="nav-link" href="#">Inscription</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Connexion</a>
+        <a class="nav-link" href="{{ path('app_login')}}">Connexion</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
