--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -19,7 +19,7 @@
         <a class="nav-link" href="{{ path('new-event')}}">Créer évènement</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Inscription</a>
+        <a class="nav-link" href="{{ path('user_registration')}}">Inscription</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ path('app_login')}}">Connexion</a>
