create event with insert into pivot table problem

--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -16,7 +16,7 @@
         <a class="nav-link" href="{{ path('participations')}}">Mes participations</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ path('new-event')}}">Créer évènement</a>
+        <a class="nav-link" href="{{ path('new_event')}}">Créer évènement</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ path('user_registration')}}">Inscription</a>
