--- a/templates/events/_delete_form.html.twig
+++ b/templates/events/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('events_delete', {'id': event.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('delete_event', {'id': event_id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event.id) }}">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event_id) }}">
     <button class="btn">Delete</button>
 </form>
