--- a/templates/events/edit.html.twig
+++ b/templates/events/edit.html.twig
@@ -9,5 +9,5 @@
 
     <a href="{{ path('events') }}">back to list</a>
 
-    {{ include('events/_delete_form.html.twig') }}
+    {% include('events/_delete_form.html.twig') with {'event_id': event.id} %}
 {% endblock %}
