--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -18,12 +18,19 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ path('new_event')}}">Créer évènement</a>
       </li>
+      {% if not app.user %}
       <li class="nav-item">
         <a class="nav-link" href="{{ path('user_registration')}}">Inscription</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ path('app_login')}}">Connexion</a>
       </li>
+      {% endif %}
+      {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+      </li>
+      {% endif %}
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Rechercher" aria-label="Rechercher">
