--- a/templates/includes/_footer.html.twig
+++ b/templates/includes/_footer.html.twig
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row flex align-center">
-		<div class="logo col sm-3">Logo</div>
+		<div class="logo col sm-3"><img class="img-fluid logo" src="{{ asset('images/logo.png') }}" alt="Collectif"/></div>
 		<div class="col-sm-9"><p>Marre de galérer à trouver quelque chose pour occuper tes week-end ? Collectif est fait pour toi !</p></div>
 	</div>
 </div>
