--- a/templates/events/_form.html.twig
+++ b/templates/events/_form.html.twig
@@ -1,11 +1,44 @@
 {{ form_start(form) }}
-    {{ form_row(form.name) }}
-    {{ form_row(form.date) }}
-    {{ form_row(form.city) }}
-    {{ form_row(form.nb_participant) }}
-    {{ form_row(form.url_image) }}
-    {{ form_row(form.description) }}
-    {{ form_row(form.categories) }}
+	<div class="form-row">
+		<div class="form-group col-md-6">
+    		{{ form_row(form.name) }}
+    	</div>
+    </div>
+	<div class="form-row date">
+		<div class="form-group col-md-6">
+    		{{ form_row(form.date) }}
+		</div>
+	</div>
+	<div class="form-row">
+		<div class="form-group col-md-6">
+    		{{ form_row(form.city) }}
+    	</div>
+		<div class="form-group col-md-6">
+    		{{ form_row(form.nb_participant) }}
+    	</div>
+    </div>
+	<div class="form-row">
+		<div class="form-group col-md-6">
+    		{{ form_row(form.url_image) }}
+		</div>
+	</div>
+	<div class="form-row">
+		<div class="form-group col-md-6">
+    		{{ form_row(form.description) }}
+    	</div>
+    </div>
+	<div class="form-row categories">
+		<div class="form-group col-md-6">
+				<label class="required">Catégories</label>
+			    {% for checkbox in form.categories.children %}
+			        <div class="categorie">
+			            {{ form_widget(checkbox) }}
+			            {{ form_label(checkbox) }}
+			            {{ form_errors(checkbox) }}
+			        </div>
+			    {% endfor %}
+    	</div>
+    </div>
 
-    <button type="submit">Créer évènement</button>
+    <button type="submit" class="btn btn-primary d-block mx-auto">Créer évènement</button>
 {{ form_end(form) }}
