--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,15 +6,35 @@
 
 {% block body %}
 
-{{ form_start(form) }}
-    {{ form_row(form.surname) }}
-    {{ form_row(form.name) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.phone) }}
-    {{ form_row(form.password.first) }}
-    {{ form_row(form.password.second) }}
-
-    <button type="submit">Register!</button>
-{{ form_end(form) }}
+<div class="container">
+	<h1 class="text-center mb-5">Inscription</h1>
+	{{ form_start(form) }}
+	<div class="form-row">
+		<div class="form-group col-md-6">
+	   		{{ form_row(form.surname) }}
+		</div>
+	    <div class="form-group col-md-6">
+	    	{{ form_row(form.name) }}
+		</div>
+	</div>
+	<div class="form-row">
+		<div class="form-group col-md-6">
+	    	{{ form_row(form.email) }}
+		</div>
+	    <div class="form-group col-md-6">
+	    	{{ form_row(form.phone) }}
+	    </div>
+	</div>
+	<div class="form-row">
+		<div class="form-group col-md-6">
+	    	{{ form_row(form.password.first) }}
+	    </div>
+	    <div class="form-group col-md-6">
+	    	{{ form_row(form.password.second) }}
+	    </div>
+	</div>
+	    <button type="submit" class="btn btn-primary d-block mx-auto">S'enregistrer</button>
+	{{ form_end(form) }}
+</div>
 
 {% endblock %}
