--- a/templates/events/index.html.twig
+++ b/templates/events/index.html.twig
@@ -17,14 +17,14 @@
                 <label for="ville">Ville :</label>
                 <input class="form-control mb-3 w-50" type="text" id="ville" name="ville">
 
-                <label for="categorie">Catégorie :</label>
-                {# <input class="form-control mb-3 w-50" type="text" id="categorie" name="categorie">#}
+                {#<label for="categorie">Catégorie :</label>
+                <input class="form-control mb-3 w-50" type="text" id="categorie" name="categorie">
                 {% for categorie in categories %}
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="{{'categorie_' ~ categorie.id}}" name="{{'categorie_' ~ categorie.id}}" value="{{categorie.name}}">
                         <label class="form-check-label" for="{{'categorie_' ~ categorie.id}}">{{categorie.name}}</label>
                     </div>
-                {% endfor %}
+                {% endfor %}#}
             {% endblock %}
             </div>
             <div class="col-sm-9">
