--- a/templates/participations/participations.html.twig
+++ b/templates/participations/participations.html.twig
@@ -55,6 +55,9 @@
                         {% endif %}
                     </div>
                 {% endfor %}
+                <div class="navigation">
+                    {{ knp_pagination_render(events) }}
+                </div>
             </div>
         </div>
     </div>
