--- a/templates/events/index.html.twig
+++ b/templates/events/index.html.twig
@@ -10,14 +10,15 @@
         <div class="row">
             <div class="col-sm-3">
             {% block aside %}
-                <label for="date">Date :</label>
+                {% include 'events/_filters.html.twig' with {filters:filters} only %}
+                {# <label for="date">Date :</label>
                 <input class="form-control mb-3 w-50" type="date" id="date" name="date">
 
 
                 <label for="ville">Ville :</label>
                 <input class="form-control mb-3 w-50" type="text" id="ville" name="ville">
 
-                {#<label for="categorie">Catégorie :</label>
+                <label for="categorie">Catégorie :</label>
                 <input class="form-control mb-3 w-50" type="text" id="categorie" name="categorie">
                 {% for categorie in categories %}
                     <div class="form-check">
@@ -38,7 +39,7 @@
                             <div class="col-md-6">
                         {% endif %}
                                 <h2>{{event[0].name}}</h2>
-                                <p>Date : {{event[0].date|date("d-m-y")}} à {{event[0].date|date("H:m:s")}}</p>
+                                <p>Date : {{event[0].date|date("d/m/Y")}} à {{event[0].date|date("H:m:s")}}</p>
                                 <p>Participant : {{event.participant}} / {{event[0].nbParticipant}}</p>
                                 <p>Ville : {{event[0].city}}</p>
                                 <p>Catégorie : {{event.name}}</p>
