--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -32,9 +32,9 @@
       </li>
       {% endif %}
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    {# <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Rechercher" aria-label="Rechercher">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
-    </form>
+    </form> #}
   </div>
 </nav>
