finish all ajax filters and remove filter home

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -35,6 +35,10 @@ a:hover{
 	display: flex;
 }
 
+.hide{
+	display: none;
+}
+
 .align-center{
 	align-items: center;
 }
@@ -53,6 +57,29 @@ a:hover{
 
 .mbxs{
 	margin-bottom: 20px;
+}
+
+.js-filter-form{
+	position: relative;
+}
+
+.is-loading::before{
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background-color: #fff;
+	opacity: .5;
+	z-index: 4;
+}
+
+.is-loading .spinner-border{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	z-index: 5;
 }
 
 /* Header */
