--- a/templates/events/_delete_form.html.twig
+++ b/templates/events/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form class="d-inline-block align-bottom" method="post" action="{{ path('delete_event', {'id': event_id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form class="d-inline-block align-bottom card-link" method="post" action="{{ path('delete_event', {'id': event_id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event_id) }}">
     <button class="btn btn-danger mt-3">Delete</button>
