--- a/templates/events/_filters.html.twig
+++ b/templates/events/_filters.html.twig
@@ -1,4 +1,9 @@
-{{ form_start(filters) }}
+{{ form_start(filters, {attr: {class: 'js-filter-form'}}) }}
+	
+	<div class="spinner-border hide js-loading" role="status" aria-hidden="true">
+		<span class="sr-only">Loading...</span>
+	</div>
+
 	<div class="form-row">
 		<div class="form-group col-md-6">
     		{{ form_row(filters.query) }}
@@ -14,8 +19,11 @@
     		{{ form_row(filters.city) }}
     	</div>
     </div>
-	<div class="form-row categories">
-		<div class="form-group col-md-6">
+    {% if showCategoryFilter is defined and showCategoryFilter is same as(0) %}
+    	
+    {% else %}
+		<div class="form-row categories">
+			<div class="form-group col-md-6">
 				<label class="required">Catégories</label>
 			    {% for checkbox in filters.categories.children %}
 			        <div class="categorie">
@@ -24,8 +32,9 @@
 			            {{ form_errors(checkbox) }}
 			        </div>
 			    {% endfor %}
-    	</div>
-    </div>
+	    	</div>
+	    </div>
+	{% endif %}
 
     <button type="submit" class="btn btn-primary d-block">Filtrer</button>
 
