--- a/templates/participations/participations.html.twig
+++ b/templates/participations/participations.html.twig
@@ -6,57 +6,19 @@
 
 {% block body %}
 
-    <div class="container-fluid
-    ">
+    <div class="container-fluid js-filter">
         <div class="row">
             <div class="col-sm-3">
             {% block aside %}
-                <label for="date">Date :</label>
-                <input class="form-control mb-3 w-50" type="date" id="date" name="date">
-
-
-                <label for="ville">Ville :</label>
-                <input class="form-control mb-3 w-50" type="text" id="ville" name="ville">
-
-                <label for="categorie">Catégorie :</label>
-                {# <input class="form-control mb-3 w-50" type="text" id="categorie" name="categorie">#}
-                {% for categorie in categories %}
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="{{'categorie_' ~ categorie.id}}" name="{{'categorie_' ~ categorie.id}}" value="{{categorie.name}}">
-                        <label class="form-check-label" for="{{'categorie_' ~ categorie.id}}">{{categorie.name}}</label>
-                    </div>
-                {% endfor %}
+                {% include 'events/_filters.html.twig' %}
             {% endblock %}
             </div>
             <div class="col-sm-9">
-                {% for event in events %}
-                    <div class="index-intro">
-                        {% if event[0].urlImage is not null %}
-                        <div class="row">
-                            <div class="col-md-6">
-                                <img class="img-fluid" src="{{event[0].urlImage}}" alt="évènement-{{event[0].id}}" />
-                            </div>
-                            <div class="col-md-6">
-                        {% endif %}
-                                <h2>{{event[0].name}}</h2>
-                                <p>Date : {{event[0].date|date("d-m-y")}} à {{event[0].date|date("H:m:s")}}</p>
-                                <p>Participant : {{event.participant}} / {{event[0].nbParticipant}}</p>
-                                <p>Ville : {{event[0].city}}</p>
-                                <p>Catégorie : <a href="{{ path('events_category', {'category': event.name}) }}">{{event.name}}</a></p>
-                                {# {% if event.participant  != event[0].nbParticipant%}
-                                    <a href="#">Rejoindre cet évènement</a>
-                                {% endif %} #}
-                                <a class="btn btn-primary mr-3" href="{{ path('show_event', {'id': event[0].id}) }}">Voir</a>
-                                <a class="btn btn-success mr-3" href="{{ path('edit_event', {'id': event[0].id}) }}">Modifier</a>
-                                {% include('events/_delete_form.html.twig') with {'event_id': event[0].id} %}
-                        {% if event[0].urlImage is not null %}
-                            </div>
-                        </div>
-                        {% endif %}
-                    </div>
-                {% endfor %}
-                <div class="navigation">
-                    {{ knp_pagination_render(events) }}
+                <div class="js-filter-content row">
+                    {% include 'events/_events.html.twig' %}
+                </div>
+                <div class="navigation js-filter-pagination">
+                    {% include 'events/_pagination.html.twig' %}
                 </div>
             </div>
         </div>
