--- a/templates/events/_form.html.twig
+++ b/templates/events/_form.html.twig
@@ -19,7 +19,7 @@
     </div>
 	<div class="form-row">
 		<div class="form-group col-md-6">
-    		{{ form_row(form.url_image) }}
+    		{{ form_row(form.imageFile) }}
 		</div>
 	</div>
 	<div class="form-row">
