--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
         {% endblock %}
     </header>
 
-    <main id="{% block body_id '' %}">
+    <main id="{% block body_id '' %}" class="{% block body_class '' %}">
         {% block filters %}
         {% endblock %}
         {% block body %}
