--- a/templates/events/_form.html.twig
+++ b/templates/events/_form.html.twig
@@ -40,5 +40,5 @@
     	</div>
     </div>
 
-    <button type="submit" class="btn btn-primary d-block mx-auto">Créer évènement</button>
+    <button type="submit" class="btn btn-primary d-block mx-auto">Valider</button>
 {{ form_end(form) }}
