--- a/templates/events/new.html.twig
+++ b/templates/events/new.html.twig
@@ -4,6 +4,8 @@
 
 {% block body_id 'new-event' %}
 
+{% block body_class 'form-style form-style-with-date' %}
+
 {% block body %}
 	<div class="container">
 	    <h1 class="text-center mb-5">Créer un nouvel évènement</h1>
