--- a/templates/categories/edit.html.twig
+++ b/templates/categories/edit.html.twig
@@ -2,12 +2,19 @@
 
 {% block title %}Edit Categories{% endblock %}
 
+{% block body_id 'edit-category' %}
+
+{% block body_class 'form-style' %}
+
 {% block body %}
-    <h1>Edit Categories</h1>
+    <div class="container">
+		<h1 class="text-center mb-5">Edit Categories</h1>
 
-    {{ include('categories/_form.html.twig', {'button_label': 'Update'}) }}
+	    {{ include('categories/_delete_form.html.twig') }}
 
-    <a href="{{ path('categories_index') }}">back to list</a>
+	    {{ include('categories/_form.html.twig', {'button_label': 'Update'}) }}
 
-    {{ include('categories/_delete_form.html.twig') }}
+	    <a href="{{ path('categories_index') }}">back to list</a>
+	</div>
+
 {% endblock %}
