--- a/templates/categories/new.html.twig
+++ b/templates/categories/new.html.twig
@@ -2,10 +2,16 @@
 
 {% block title %}New Categories{% endblock %}
 
+{% block body_id 'new-category' %}
+
+{% block body_class 'form-style' %}
+
 {% block body %}
-    <h1>Create new Categories</h1>
+    <div class="container">
+		<h1 class="text-center mb-5">Créer une nouvelle catégorie</h1>
 
-    {{ include('categories/_form.html.twig') }}
+	    {{ include('categories/_form.html.twig') }}
 
-    <a href="{{ path('categories_index') }}">back to list</a>
+	    <a href="{{ path('categories_index') }}">back to list</a>
+	</div>
 {% endblock %}
