--- a/templates/categories/show.html.twig
+++ b/templates/categories/show.html.twig
@@ -20,7 +20,7 @@
 
     <a href="{{ path('categories_index') }}">back to list</a>
 
-    <a href="{{ path('categories_edit', {'id': category.id}) }}">edit</a>
+    <a class="btn btn-success mt-3 mb-3 ml-3 mr-3 card-link" href="{{ path('categories_edit', {'id': category.id}) }}">edit</a>
 
     {{ include('categories/_delete_form.html.twig') }}
 {% endblock %}
