--- a/templates/events/edit.html.twig
+++ b/templates/events/edit.html.twig
@@ -2,12 +2,17 @@
 
 {% block title %}Edit Events{% endblock %}
 
+{% block body_id 'edit-event' %}
+
+{% block body_class 'form-style form-style-with-date edit-form' %}
+
 {% block body %}
-    <h1>Edit Events</h1>
+<div class="container">
+	<h1 class="text-center mb-5">Edit Events</h1>
+    {% include('events/_delete_form.html.twig') with {'event_id': event.id} %}
 
     {{ include('events/_form.html.twig') }}
 
     <a href="{{ path('events') }}">back to list</a>
-
-    {% include('events/_delete_form.html.twig') with {'event_id': event.id} %}
+	</div>
 {% endblock %}
