--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,27 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="form-row">
+	<div class="form-group col-md-6">
+   		{{ form_row(form.surname) }}
+	</div>
+    <div class="form-group col-md-6">
+    	{{ form_row(form.name) }}
+	</div>
+</div>
+<div class="form-row">
+	<div class="form-group col-md-6">
+    	{{ form_row(form.email) }}
+	</div>
+    <div class="form-group col-md-6">
+    	{{ form_row(form.phone) }}
+    </div>
+</div>
+<div class="form-row">
+	<div class="form-group col-md-6">
+    	{{ form_row(form.password.first) }}
+    </div>
+    <div class="form-group col-md-6">
+    	{{ form_row(form.password.second) }}
+    </div>
+</div>
+    <button type="submit" class="btn btn-primary d-block mx-auto">Valider</button>
 {{ form_end(form) }}
