--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -3,11 +3,14 @@
 {% block title %}Edit User{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+    <div class="container">
+		<h1 class="text-center mb-5">Edit User</h1>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+	    {{ include('user/_delete_form.html.twig') }}
 
-    <a href="{{ path('user_index') }}">back to list</a>
+	    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    {{ include('user/_delete_form.html.twig') }}
+	    <a href="{{ path('user_index') }}">back to list</a>
+	</div>
+
 {% endblock %}
