--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -2,10 +2,16 @@
 
 {% block title %}New User{% endblock %}
 
+{% block body_id 'new-user' %}
+
+{% block body_class 'form-style' %}
+
 {% block body %}
-    <h1>Create new User</h1>
+<div class="container">
+	<h1 class="text-center mb-5">Create new User</h1>
 
     {{ include('user/_form.html.twig') }}
 
     <a href="{{ path('user_index') }}">back to list</a>
+</div>
 {% endblock %}
