--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -40,7 +40,7 @@
 
     <a href="{{ path('user_index') }}">back to list</a>
 
-    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+    <a class="btn btn-success mt-3 mb-3 ml-3 mr-3 card-link" href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
