--- a/templates/events/show.html.twig
+++ b/templates/events/show.html.twig
@@ -19,8 +19,18 @@
                 <p>Catégorie : <a href="{{ path('events_category', {category: event[0].name})}}">{{event[0].name}}</a></p>
                 <p>{{event[0][0].description}}</p>
                 <div class="d-block text-center btns-show-event">
-                    {% if event[0].participant  != event[0][0].nbParticipant%}
-                        <a class="btn btn-primary mr-3" href="#">Rejoindre cet évènement</a>
+                    {% if participe != -1 %}
+                        {% if participe == 1 %}
+                                {# <a class="btn btn-danger mr-3" href="#">Quitter cet évènement</a> #}
+                                {% include('events/_leave_form.html.twig') with {'event_id': event[0][0].id, 'participant': app.user.id} %}
+                        {% else %}
+                            {% if event[0].participant  != event[0][0].nbParticipant%}
+                                {# <a class="btn btn-primary mr-3" href="#">Rejoindre cet évènement</a> #}
+                                {% include('events/_join_form.html.twig') with {'event_id': event[0][0].id, 'participant': app.user.id} %}
+                            {% endif %}
+                        {% endif %}
+                    {% else %}
+                        <p>Pour rejoindre un évènement, vous devez vous <a class="nav-link" href="{{ path('app_login')}}">connecter</a></p>
                     {% endif %}
                     <a class="btn btn-success mr-3" href="{{ path('edit_event', {'id': event[0][0].id}) }}">edit</a>
                     {% include('events/_delete_form.html.twig') with {'event_id': event[0][0].id} %}
