--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -25,11 +25,11 @@
             </tr>
             <tr>
                 <th>Surname</th>
-                <td>{{ user.surname }}</td>
+                <td>{{ user.firstname }}</td>
             </tr>
             <tr>
                 <th>Name</th>
-                <td>{{ user.name }}</td>
+                <td>{{ user.lastname }}</td>
             </tr>
             <tr>
                 <th>Phone</th>
