--- a/templates/events/_events.html.twig
+++ b/templates/events/_events.html.twig
@@ -1,24 +1,29 @@
 {% for event in events %}
-<div class="col-sm-6 col-xs-12" id="event-{{event[0].id}}">
+<div class="col-sm-6 col-xs-12 {% if event[0].date < date() %}event-finished{% endif %}" id="event-{{event[0].id}}">
     <div class="card mb-3">
         {% if event[0].urlImage is not null %}
                 <img class="card-img-top" src="{{vich_uploader_asset(event[0], 'imageFile')}}" alt="évènement-{{event[0].id}}" />
         {% endif %}
         <div class="card-body">
             <h2 class="card-title text-center">{{event[0].name}}</h2>
+            <p>Proposé par : {{event.firstname}} {{event.lastname}}</p>
             <p class="card-text">Date : {{event[0].date|date("d/m/Y")}} à {{event[0].date|date("H:m:s")}}</p>
-            {# <p class="card-text">Participant : {{event.participant}} / {{event[0].nbParticipant}}</p> #}
+            <p class="card-text">Participant : {{event.participant}} / {{event[0].nbParticipant}}</p>
             <p class="card-text">Ville : {{event[0].city}}</p>
             <p class="card-text">Catégorie : <a href="{{ path('events_category', {category: event[0].name})}}">{{event.name}}<a/></p>
             {#% if event.participant  != event[0].nbParticipant%}
                 <a href="#">Rejoindre cet évènement</a>
             {% endif %}#}
             <div class="text-center">
-                <a class="btn btn-primary mr-3 card-link" href="{{ path('show_event', {'id': event[0].id}) }}">Voir</a>
-                {% if app.user.id is defined %}
-                    {% if event[0].creator.id == app.user.id %}
-                        <a class="btn btn-success mr-3 card-link" href="{{ path('edit_event', {'id': event[0].id}) }}">Modifier</a>
-                        {% include('events/_delete_form.html.twig') with {'event_id': event[0].id} %}
+                {% if event[0].date < date() %}
+                    <p class="text-danger">Evenement terminé !</p>
+                {% else %}
+                    <a class="btn btn-primary mr-3 card-link" href="{{ path('show_event', {'id': event[0].id}) }}">Voir</a>
+                    {% if app.user.id is defined %}
+                        {% if event[0].creator.id == app.user.id %}
+                            <a class="btn btn-success mr-3 card-link" href="{{ path('edit_event', {'id': event[0].id}) }}">Modifier</a>
+                            {% include('events/_delete_form.html.twig') with {'event_id': event[0].id} %}
+                        {% endif %}
                     {% endif %}
                 {% endif %}
                 {# <a href="{{ path('new_event') }}">Create new</a>#}
