--- a/templates/events/_filters.html.twig
+++ b/templates/events/_filters.html.twig
@@ -9,6 +9,11 @@
     		{{ form_row(filters.query) }}
     	</div>
     </div>
+	<div class="form-row">
+		<div class="form-group col-md-6">
+    		{{ form_row(filters.name) }}
+    	</div>
+    </div>
 	<div class="form-row date">
 		<div class="form-group col-md-6">
     		{{ form_row(filters.date) }}
