--- a/templates/participations/participations.html.twig
+++ b/templates/participations/participations.html.twig
@@ -5,7 +5,7 @@
 {% block body_id 'participations' %}
 
 {% block body %}
-
+    {{dump(events)}}
     <div class="container-fluid js-filter">
         <div class="row">
             <div class="col-sm-3">
