--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,10 +13,10 @@
 	{{ form_start(form) }}
 	<div class="form-row">
 		<div class="form-group col-md-6">
-	   		{{ form_row(form.surname) }}
+	   		{{ form_row(form.firstname) }}
 		</div>
 	    <div class="form-group col-md-6">
-	    	{{ form_row(form.name) }}
+	    	{{ form_row(form.lastname) }}
 		</div>
 	</div>
 	<div class="form-row">
