add error message for bad date

--- a/templates/events/_form.html.twig
+++ b/templates/events/_form.html.twig
@@ -5,7 +5,7 @@
     	</div>
     </div>
 	<div class="form-row date">
-		<div class="form-group col-md-6">
+		<div class="form-group col-md-6 {% if not form.date.vars.valid %}has-error{% endif %}">
     		{{ form_row(form.date) }}
 		</div>
 	</div>
