--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -149,6 +149,18 @@ footer{
 	}
 }
 
+form{
+	.has-error{
+		ul{
+			list-style: none;
+			padding-left: 0;
+			li{
+				color: red;
+			}
+		}
+	}
+}
+
 .form-style{
 
 	input,select,textarea{
