--- a/templates/events/_form.html.twig
+++ b/templates/events/_form.html.twig
@@ -14,9 +14,14 @@
     		{{ form_row(form.city) }}
     	</div>
 		<div class="form-group col-md-6">
-    		{{ form_row(form.nb_participant) }}
+    		{{ form_row(form.address) }}
     	</div>
     </div>
+	<div class="form-row">
+		<div class="form-group col-md-6">
+    		{{ form_row(form.limite) }}
+    	</div>
+	</div>
 	<div class="form-row">
 		<div class="form-group col-md-6">
     		{{ form_row(form.imageFile) }}
